# ridley

./: .gitignore  CLAUDE.md  README.md  deps.edn  package-lock.json  package.json  shadow-cljs.edn
desktop/: README.md  build.sh  bundle-dylibs.sh  dev.sh
desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: geo_server.rs  main.rs  manifold_ops.rs  sdf_ops.rs
dev-docs/: 3mf-multimateriale-stato-e-evoluzione.md  AI_Extension.md  AI_Tier1_SystemPrompt.md  Accessibility.md  Architecture.md  Architecture_Assessment_2026-02-06.md  DESIGN_procedural_animations.md  Examples.md  FilletChamfer2D.md  FilletChamfer3D.md  ProceduralDisplacement.md  ProceduralDisplacement2.md  Roadmap.md  ShapeFn.md  Spec.md  TASK_ai_focus_indicator_layer.md  TASK_animation_system.md  TASK_create_ai_extension_skeleton.md  TASK_disambiguate_commands_with_prefixes.md  TASK_extend_registry_for_shapes.md  TASK_fillet_chamfer.md  TASK_fix_codemirror_selection_and_ai.md  TASK_fix_loft_manifold.md  TASK_fix_wrap_value_field.md  TASK_handle_it_lo_reference.md  TASK_implement_ai_handlers.md  TASK_implement_structured_replace.md  TASK_improve_ai_system_prompt.md  TASK_integrate_clipper2_shape_booleans.md  TASK_puppet_library.md  TASK_restore_full_ai_panel.md  TASK_shell_shape_fn.md  TASK_voice_ux_improvements.md  Task_Bounds_Function.md  Task_Tier_System.md  Voice_and_Help_Architecture.md  addendum-2-brief-mesh-components-tree.md  addendum-3-session-ui.md  addendum-4-session-done.md  addendum-brief-edit-mesh-split.md  (+109 more)
docs/: Architecture.md  Examples.md  Roadmap.md  Spec.md  index.html  manual-discovery-report.md  manual-redesign-plan.md  symbol-audit-report.md
examples/: canvas-weave.clj  cerniera.clj  cerniera2.clj  cerniera2_A.clj  cerniera2_B.clj  cerniera2_C.clj  dice.clj  display-frame.clj  dog-toy.clj  embossed-column.clj  meshing-gears.clj  move-to-mate-demo.clj  multiboard-bottle-holder.clj  multiboard-holder.clj  multiboard-native.clj  (+18 more)
(+717 files in other folders)
