[package]
name = "ridley-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
rfd = "0.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Optimize dependencies in dev mode (Manifold is 7x slower unoptimized)
[profile.dev.package."*"]
opt-level = 3
