[package]
name = "ridley-desktop"
# Baseline only. tauri.conf.json's `version` wins for the bundle, and CI stamps
# that from the release tag — this is what a local dev build reports.
version = "3.4.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
rfd = "0.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Keep dependencies optimized in dev builds.
# libfive and the tauri crate are heavy; default opt-level
# makes debug builds painfully slow for interactive work.
[profile.dev.package."*"]
opt-level = 3
